Test Urinary Protein Excretion Estimation

--- a/gdl2/Urinary_Protein_Excretion_Estimation.v0.test.yml
+++ b/gdl2/Urinary_Protein_Excretion_Estimation.v0.test.yml
@@ -45,3 +45,12 @@ test_cases:
     1:
       gt0008|Estimated 24 hour urinary protein excretion: 0.0,g/day
       gt0010|Interpretation: Within normal limits
+- id: Test conversion factors
+  input:
+    1:
+      gt0003|Urine protein: 50,mg/dl
+      'gt0005|Urine creatinine (Norm: 0.02-0.037µmol/l)': 20,mg/dl
+  expected_output:
+    1:
+      gt0008|Estimated 24 hour urinary protein excretion: 2.5,g/day
+      gt0010|Interpretation: Investigate further
