Update archetype and guideline

--- a/gdl2/acep_ED_covid19_managment_tool.v1.test.yml
+++ b/gdl2/acep_ED_covid19_managment_tool.v1.test.yml
@@ -8,8 +8,8 @@ test_cases:
       gt0005|NIH severity classification: local::at0102|Critical|
   expected_output:
     1:
-      gt0036|NIH severity classification: local::at0045|Critical|
-      gt0037|Patient's management plan: Workup-CXR, U/S, CT?, EKG, CBC, CMP (CRP, D-Dimer, Ferritin). Tx-Dexamethasone +/- Remdesivir; Oxygen Support; Intubate if Severe Resp Distress; Conservative Fluid Strategy. Admit to ICU with proph a/c (unless preg).
+      gt0036|NIH severity classification: Critical
+      gt0037|Patient's management plan: Workup-CXR, U/S, CT?, EKG, CBC, CMP (CRP, D-Dimer, Ferritin). Tx-Dexamethasone +/- Remdesivir; Oxygen Support; Intubate if Severe Resp Distress; Conservative Fluid Strategy. Admit to ICU with prophylactic Anticoagulants (unless pregnant).
 - id: pre-condition not fulfilled
   input:
     1:
@@ -24,8 +24,8 @@ test_cases:
       gt0005|NIH severity classification: local::at0102|Critical|
   expected_output:
     1:
-      gt0036|NIH severity classification: local::at0045|Critical|
-      gt0037|Patient's management plan: Workup-CXR, U/S, CT?, EKG, CBC, CMP (CRP, D-Dimer, Ferritin). Tx-Dexamethasone +/- Remdesivir; Oxygen Support; Intubate if Severe Resp Distress; Conservative Fluid Strategy. Admit to ICU with proph a/c (unless preg).
+      gt0036|NIH severity classification: Critical
+      gt0037|Patient's management plan: Workup-CXR, U/S, CT?, EKG, CBC, CMP (CRP, D-Dimer, Ferritin). Tx-Dexamethasone +/- Remdesivir; Oxygen Support; Intubate if Severe Resp Distress; Conservative Fluid Strategy. Admit to ICU with prophylactic Anticoagulants (unless pregnant).
 - id: Severe disease severity
   input:
     1:
@@ -33,8 +33,8 @@ test_cases:
       gt0005|NIH severity classification: local::at0101|Severe|
   expected_output:
     1:
-      gt0036|NIH severity classification: local::at0044|Severe|
-      gt0037|Patient's management plan: Workup-CXR, U/S, CT?, EKG, CBC, CMP (CRP, D-Dimer, Ferritin). Tx-Dexamethasone +/- Remdesivir, Oxygen Support. Admit -> Clinical Decision Floor vs ICU with proph a/c (unless preg).
+      gt0036|NIH severity classification: Severe
+      gt0037|Patient's management plan: Workup-CXR, U/S, CT?, EKG, CBC, CMP (CRP, D-Dimer, Ferritin). Tx-Dexamethasone +/- Remdesivir, Oxygen Support. Admit -> Clinical Decision Floor vs ICU with prophylactic Anticoagulants (unless pregnant).
 - id: Mild without PRIEST score and risk factors results
   input:
     1:
@@ -74,8 +74,8 @@ test_cases:
     1:
       gt0030|PRIEST score: 0
       gt0031|COVID-19 additional risk factors: 0
-      gt0036|NIH severity classification: local::at0043|Moderate|
-      gt0037|Patient's management plan: Workup-CXR, U/S, CT?, EKG, CBC, CMP (CRP, D-Dimer, Ferritin). Tx-Monoclonal Abx? (Avoid steroids if not hypoxic) No concerning imaging/labs? Consider D/C home with CDC Patient Materials + Home PulseOx. If Admit -> Obs/floor with proph a/c (unless preg).
+      gt0036|NIH severity classification: Moderate
+      gt0037|Patient's management plan: Workup-CXR, U/S, CT?, EKG, CBC, CMP (CRP, D-Dimer, Ferritin). Tx-Monoclonal Abx? (Avoid steroids if not hypoxic) No concerning imaging/labs? Consider Discharging home with CDC Patient Materials + Home PulseOx. If Admit -> Obs/floor with prophylactic Anticoagulants (unless pregnant).
 - id: Mild disease severity + PRIEST score = 0 + risk factors 0
   input:
     1:
@@ -108,8 +108,8 @@ test_cases:
     1:
       gt0030|PRIEST score: 0
       gt0031|COVID-19 additional risk factors: 0
-      gt0036|NIH severity classification: local::at0042|Mild|
-      gt0037|Patient's management plan: Tx-Monoclonal Abx? (Avoid steroids if not hypoxic). Consider D/C home with CDC Patient Materials + Home PulseOx.
+      gt0036|NIH severity classification: Mild
+      gt0037|Patient's management plan: Tx-Monoclonal Abx? (Avoid steroids if not hypoxic). Consider Discharging home with CDC Patient Materials + Home PulseOx.
 - id: Moderate disease severity + PRIEST score = 4 + risk factors 1
   input:
     1:
@@ -142,8 +142,8 @@ test_cases:
     1:
       gt0030|PRIEST score: 4
       gt0031|COVID-19 additional risk factors: 1
-      gt0036|NIH severity classification: local::at0043|Moderate|
-      gt0037|Patient's management plan: Workup-CXR, U/S, CT?, EKG, CBC, CMP (CRP, D-Dimer, Ferritin). Tx-Monoclonal Abx? (Avoid steroids if not hypoxic) No concerning imaging/labs? Consider D/C home with CDC Patient Materials + Home PulseOx. If Admit -> Obs/floor with proph a/c (unless preg).
+      gt0036|NIH severity classification: Moderate
+      gt0037|Patient's management plan: Workup-CXR, U/S, CT?, EKG, CBC, CMP (CRP, D-Dimer, Ferritin). Tx-Monoclonal Abx? (Avoid steroids if not hypoxic) No concerning imaging/labs? Consider Discharging home with CDC Patient Materials + Home PulseOx. If Admit -> Obs/floor with prophylactic Anticoagulants (unless pregnant).
 - id: Moderate disease severity + PRIEST score = 4 + risk factors 2
   input:
     1:
@@ -176,8 +176,8 @@ test_cases:
     1:
       gt0030|PRIEST score: 4
       gt0031|COVID-19 additional risk factors: 2
-      gt0036|NIH severity classification: local::at0043|Moderate|
-      gt0037|Patient's management plan: Workup-CXR, U/S, CT?, EKG, CBC, CMP (CRP, D-Dimer, Ferritin). Tx-Monoclonal Abx? (Avoid steroids if not hypoxic). Admit -> Obs/floor with proph a/c (unless preg).
+      gt0036|NIH severity classification: Moderate
+      gt0037|Patient's management plan: Workup-CXR, U/S, CT?, EKG, CBC, CMP (CRP, D-Dimer, Ferritin). Tx-Monoclonal Abx? (Avoid steroids if not hypoxic). Admit -> Obs/floor with prophylactic Anticoagulants (unless pregnant).
 - id: Moderate disease severity + PRIEST score = 7 + risk factors 0
   input:
     1:
@@ -210,8 +210,8 @@ test_cases:
     1:
       gt0030|PRIEST score: 7
       gt0031|COVID-19 additional risk factors: 0
-      gt0036|NIH severity classification: local::at0043|Moderate|
-      gt0037|Patient's management plan: Workup-CXR, U/S, CT?, EKG, CBC, CMP (CRP, D-Dimer, Ferritin). Tx-Monoclonal Abx? (Avoid steroids if not hypoxic). Admit -> Obs/floor with proph a/c (unless preg).
+      gt0036|NIH severity classification: Moderate
+      gt0037|Patient's management plan: Workup-CXR, U/S, CT?, EKG, CBC, CMP (CRP, D-Dimer, Ferritin). Tx-Monoclonal Abx? (Avoid steroids if not hypoxic). Admit -> Obs/floor with prophylactic Anticoagulants (unless pregnant).
 - id: Mild disease severity + PRIEST score = 4 + risk factors 1
   input:
     1:
@@ -244,8 +244,8 @@ test_cases:
     1:
       gt0030|PRIEST score: 4
       gt0031|COVID-19 additional risk factors: 1
-      gt0036|NIH severity classification: local::at0042|Mild|
-      gt0037|Patient's management plan: Tx-Monoclonal Abx? (Avoid steroids if not hypoxic). Consider D/C home with CDC Patient Materials + Home PulseOx.
+      gt0036|NIH severity classification: Mild
+      gt0037|Patient's management plan: Tx-Monoclonal Abx? (Avoid steroids if not hypoxic). Consider Discharging home with CDC Patient Materials + Home PulseOx.
 - id: Mild disease severity + PRIEST score = 4 + risk factors 2
   input:
     1:
@@ -278,8 +278,8 @@ test_cases:
     1:
       gt0030|PRIEST score: 4
       gt0031|COVID-19 additional risk factors: 2
-      gt0036|NIH severity classification: local::at0042|Mild|
-      gt0037|Patient's management plan: Tx-Monoclonal Abx? (Avoid steroids if not hypoxic). Consider D/C home with CDC Patient Materials, Close f/u to PMD + Home PulseOx
+      gt0036|NIH severity classification: Mild
+      gt0037|Patient's management plan: Tx-Monoclonal Abx? (Avoid steroids if not hypoxic). Consider Discharging home with CDC Patient Materials, Close follow-up to PMD + Home PulseOx
 - id: Maximum PRIEST score + maximum number of additional risk factors
   input:
     1:
@@ -312,5 +312,5 @@ test_cases:
     1:
       gt0030|PRIEST score: 29
       gt0031|COVID-19 additional risk factors: 13
-      gt0036|NIH severity classification: local::at0042|Mild|
-      gt0037|Patient's management plan: Tx-Monoclonal Abx? (Avoid steroids if not hypoxic). Consider D/C home with CDC Patient Materials, Close f/u to PMD + Home PulseOx
+      gt0036|NIH severity classification: Mild
+      gt0037|Patient's management plan: Tx-Monoclonal Abx? (Avoid steroids if not hypoxic). Consider Discharging home with CDC Patient Materials, Close follow-up to PMD + Home PulseOx
